apps/minecraft-server/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: minecraft-server-policy
  namespace: minecraft
spec:
  podSelector:
    matchLabels:
      app: minecraft-server
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 192.168.0.0/16
              - 172.16.0.0/12
        - ipBlock:
            cidr: ::/0
            except:
              - 2001:db8:42::/64
              - 2001:db8:43::/112
              - fc00::/7
      ports:
        - protocol: TCP
          port: 25565
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 192.168.0.0/16
              - 172.16.0.0/12
        - ipBlock:
            cidr: ::/0
            except:
              - 2001:db8:42::/64
              - 2001:db8:43::/112
              - fc00::/7
      ports:
        - protocol: TCP
          port: 443
